--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 	<script type="text/javascript" src="setup.js"></script>
 </head>
 <body onload='setup()'>
-	<div id='tabs' style='position:absolute;width:100%;height:30.5px;text-align:center;z-index:1'><button class='wideButton' onclick='switchTab("main")'>Main</button>
-	<button class='wideButton' onclick='switchTab("options")'>Options</button>
-	<button class='wideButton' onclick='switchTab("stats")'>Stats</button>
-	<button id='tabmoneybutton' class='wideButton' onclick='switchTab("money")' style='display:none'>Money</button>
-	<button class='wideButton' onclick='switchTab("about")'>About</button></div>
+	<div id='tabs' style='position:absolute;width:100%;height:30.5px;text-align:center;z-index:1'><button class='wideButton' onclick='switchTab("main")'>主頁</button>
+	<button class='wideButton' onclick='switchTab("options")'>選項</button>
+	<button class='wideButton' onclick='switchTab("stats")'>統計</button>
+	<button id='tabmoneybutton' class='wideButton' onclick='switchTab("money")' style='display:none'>金錢</button>
+	<button class='wideButton' onclick='switchTab("about")'>關於</button></div>
 	<div id='numberSmall' style='position:absolute;width:100%;bottom:24px;text-align:center;display:none;z-index:1'></div>
 	<div id='rank' style='position:absolute;width:100%;bottom:0;text-align:center;z-index:1'></div>
 	<div id='tabmain'>
@@ -54,12 +54,12 @@
 		<button id='mult3' class='bigButton' style='display:none' onclick='buyMult(3)'></button></div>
 	</div>
 	<div id='taboptions' style='position:absolute;top:36px;width:100%;text-align:center;display:none'>
-		<table align=center><tr><td><button class='bigButton' onClick='save()'>Save</button></td>
-		<td><button class='bigButton' onClick='exportSave()'>Export</button></td>
-		<td><button class='bigButton' onClick='importSave()'>Import</button></td>
-		<td><button class='bigButton' onClick='reset()'>Reset</button></td>
+		<table align=center><tr><td><button class='bigButton' onClick='save()'>保存</button></td>
+		<td><button class='bigButton' onClick='exportSave()'>導出</button></td>
+		<td><button class='bigButton' onClick='importSave()'>導入</button></td>
+		<td><button class='bigButton' onClick='reset()'>重置</button></td>
 		<td><button id='notation' class='bigButton' onClick='switchNotation()'></button></td></tr></table>
-		<div id='exportSave' style='display:none'>Here is your export save. Enjoy! <input id='exportText' style='width: 480px'></input></div>
+		<div id='exportSave' style='display:none'>這是你的導出存檔。請享受！<input id='exportText' style='width: 480px'></input></div>
 	</div>
 	<div id='tabstats' style='position:absolute;top:36px;width:100%;text-align:center;display:none'>
 		<div id='timePlayed'></div>
@@ -71,8 +71,8 @@
 		<div id='money'></div>
 		<button id='exchange1' class='bigButton' onClick='exchange(1)'></button>
 		<button id='exchange2' class='bigButton' onClick='exchange(2)'></button>
-		<button class='bigButton' onClick='exchange(3)'>Exchange 50% of number to money</button>
-		<button class='bigButton' onClick='exchange(4)'>Exchange 50% of money to number</button>
+		<button class='bigButton' onClick='exchange(3)'>將數字的50%交換成金錢</button>
+		<button class='bigButton' onClick='exchange(4)'>將金錢的50%交換成數字</button>
 		<br><br>
 		<button id='gen1' class='bigButton' onClick='buyMoney(0)'></button>
 		<button id='gen2' class='bigButton' onClick='buyMoney(1)'></button>
@@ -81,9 +81,9 @@
 		<div id='coalsection'><div id='coal'></div>
 		<div id='genpower'></div>
 		<div id='fuel'></div>
-		<button class='bigButton' onClick='exchange(5)'>Exchange $5 to 1 coal</button>
-		<button class='bigButton' onClick='exchange(6)'>Exchange 1 coal to $4</button>
-		<button class='bigButton' onClick='exchange(7)'>Turn coal to fuel</button>
+		<button class='bigButton' onClick='exchange(5)'>將$5交換成1煤炭</button>
+		<button class='bigButton' onClick='exchange(6)'>將1煤炭交換成$4</button>
+		<button class='bigButton' onClick='exchange(7)'>將煤炭變成燃料</button>
 		<br>
 		<div id='upgsection'><button id='genpowerUpg' class='bigButton' onClick='buyMoney(3)'>Upgrade gen power<br>2x<br>Cost: $1</button>
 		<button id='fuelUpg' class='bigButton' onClick='buyMoney(4)'>Increase fuel efficient<br>1x<br>Cost: $1</button></div></div>
