--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
 		<button class='bigButton' onClick='exchange(6)'>將1煤炭交換成$4</button>
 		<button class='bigButton' onClick='exchange(7)'>將煤炭變成燃料</button>
 		<br>
-		<div id='upgsection'><button id='genpowerUpg' class='bigButton' onClick='buyMoney(3)'>Upgrade gen power<br>2x<br>Cost: $1</button>
-		<button id='fuelUpg' class='bigButton' onClick='buyMoney(4)'>Increase fuel efficient<br>1x<br>Cost: $1</button></div></div>
+		<div id='upgsection'><button id='genpowerUpg' class='bigButton' onClick='buyMoney(3)'>升級生產力力量<br>2x<br>成本: $1</button>
+		<button id='fuelUpg' class='bigButton' onClick='buyMoney(4)'>增加燃料效率<br>1x<br>成本: $1</button></div></div>
 	</div>
-	<div id='tababout' style='position:absolute;top:36px;width:100%;text-align:center;display:none'>Ranks is the game where you must rank up to unlock more content.<br>
+	<div id='tababout' style='position:absolute;top:36px;width:100%;text-align:center;display:none'>階級是你一定要升級才能解鎖更多內容的遊戲。<br>
 	Created by Aarex.<br><br>
-	<a href='changelog.html' target="_newtab">Change log</a> | <a href='https://discord.gg/rJxkhzK' target="_newtab">Discord server</a></div>
+	<a href='changelog.html' target="_newtab">更新日誌</a> | <a href='https://discord.gg/rJxkhzK' target="_newtab">Discord伺服器</a></div>
 </body>
