--- a/index.html
+++ b/index.html
@@ -89,6 +89,6 @@
 		<button id='fuelUpg' class='bigButton' onClick='buyMoney(4)'>增加燃料效率<br>1x<br>成本: $1</button></div></div>
 	</div>
 	<div id='tababout' style='position:absolute;top:36px;width:100%;text-align:center;display:none'>階級是你一定要升級才能解鎖更多內容的遊戲。<br>
-	Created by Aarex.<br><br>
+	Aarex所創造。<br><br>
 	<a href='changelog.html' target="_newtab">更新日誌</a> | <a href='https://discord.gg/rJxkhzK' target="_newtab">Discord伺服器</a></div>
 </body>
