--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		<button class='bigButton' onClick='exchange(6)'>將1煤炭交換成$4</button>
 		<button class='bigButton' onClick='exchange(7)'>將煤炭變成燃料</button>
 		<br>
-		<div id='upgsection'><button id='genpowerUpg' class='bigButton' onClick='buyMoney(3)'>升級生產力力量<br>2x<br>成本: $1</button>
+		<div id='upgsection'><button id='genpowerUpg' class='bigButton' onClick='buyMoney(3)'>升級生產器力量<br>2x<br>成本: $1</button>
 		<button id='fuelUpg' class='bigButton' onClick='buyMoney(4)'>增加燃料效率<br>1x<br>成本: $1</button></div></div>
 	</div>
 	<div id='tababout' style='position:absolute;top:36px;width:100%;text-align:center;display:none'>階級是你一定要升級才能解鎖更多內容的遊戲。<br>
